<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome_budget"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/welcome_budget"
        android:textSize="40sp"
        android:textStyle="bold" />
    
        <Button
            android:id="@+id/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/budget_time" />

        <Button
            android:id="@+id/set_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/budget_categories" />

</LinearLayout>
