<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/set_budget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Budget_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/time_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_budget_title"
        android:layout_marginLeft="40dp" />
    
    <Button
        android:id="@+id/button_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_type"
        android:layout_alignParentLeft="true"
        android:text="Set Day"
        android:textColor="@color/button_text" />
    
    <Button
        android:id="@+id/button_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_day"
		android:layout_toRightOf="@id/button_day"
        android:text="Set Month"
        android:layout_marginLeft="20sp"
        android:textColor="@color/button_text" />
    
    <Button
        android:id="@+id/button_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_month"
        android:layout_alignParentRight="true"
        android:text="Set Year"
        android:textColor="@color/button_text" />
    
    <TextView
        android:id="@+id/amout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_day"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/set_budget_title"
        android:padding="10dp"
        android:text="@string/amount_title_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/amount_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignRight="@+id/button_year"
        android:ems="8"
        android:hint="@string/budget_number"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_type"
        android:layout_below="@+id/amout_title"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/day_budget_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day_budget"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/day_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Day budget"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/month_budget_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month_budget"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Month budget"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/year_budget_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/year_budget"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Year budget"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/set_budget_title"
        android:layout_marginBottom="66dp"
        android:src="@android:drawable/btn_plus" />

</RelativeLayout>